fix(client): modal a11y and learn tabs on mobile (#36750)
* fix/ make modal more visible and adjust learn tabs on mob

* fix: clean up

* fix: update snapshot

--- a/client/src/components/layouts/global.css
+++ b/client/src/components/layouts/global.css
@@ -100,6 +100,13 @@ a:focus {
 
 .modal-content {
   background-color: var(--secondary-background);
+  border-radius: 0px;
+  border: 1px solid var(--secondary-color);
+}
+
+.modal-footer,
+.modal-header {
+  border-color: var(--secondary-color);
 }
 
 /* button */
@@ -333,4 +340,14 @@ pre {
 
 .panel-primary {
   border-color: var(--primary-color);
+}
+
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:hover,
+.nav-tabs > li.active > a:focus {
+  color: var(--secondary-background);
+}
+
+.nav-tabs > li > a {
+  border-radius: 0;
 }
