--- a/client/src/templates/Challenges/classic/classic.css
+++ b/client/src/templates/Challenges/classic/classic.css
@@ -34,3 +34,9 @@
   height: 100%;
   overflow: hidden;
 }
+#challenge-page-tabs a {
+  text-decoration: none;
+}
+#challenge-page-tabs a:hover {
+  color: var(--secondary-background);
+}
